--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel ./src --out-dir dist",
     "serve": "LOG_LEVEL=debug babel-watch src/server.js | ./node_modules/.bin/pino-pretty -t",
+    "serve-mock": "LOG_LEVEL=debug USE_MOCK=true babel-watch src/server.js | ./node_modules/.bin/pino-pretty -t",
     "clean": "rimraf dist"
   },
   "author": "Mika Hiltunen",
